# chat-app-mcp

./: .gitlab-ci.yml  Dockerfile  README.md  app.py  pyproject.toml
src/: airflow_tools.py  db_tools.py  db_utils.py  form_tools.py  gitlab_tools.py  kafka_tools.py  mcp.py  s3_tools.py  smb_tools.py  utils.py  web_tools.py
templates/: database_to_datalake.md  helpers.md  orders.md  s3_to_datalake.md  spark_dq.md  spark_task.md  spark_task_kafka.md  spark_task_s3.md
